# learn-python-packaging

./: .deepsource.toml  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.txt  Makefile  README.md  codecov.yml  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/actions/autoflake-action-identifier/: action.yml
.github/actions/bandit-action-identifier/: action.yml
.github/actions/black-action-identifier/: action.yml
.github/actions/flake8-action-identifier/: action.yml
.github/actions/nox-sessions-action-identifier/: action.yml
.github/actions/nox-tags-action-identifier/: action.yml
.github/actions/test-coverage-action-identifier/: action.yml
.github/workflows/: autoflake.yml  bump.yml  code-quality.yml  docs.yml  format.yml  lint.yml  main.yml  pre-commit-workflow.yml  pre-commit.yml  release.yml  test-coverage.yml  test.yml
docs/source/: conf.py  index.rst  module_that_can_be_imported_directly.rst  module_that_can_be_invoked_from_cli.rst  module_that_can_invoke_gui_from_cli.rst  modules.rst  package_name_to_import_with.calculator_sub_package.basics.assumptions.inverses_module.rst  package_name_to_import_with.calculator_sub_package.basics.assumptions.operations_module.rst  package_name_to_import_with.calculator_sub_package.basics.assumptions.rst  package_name_to_import_with.calculator_sub_package.basics.rst  package_name_to_import_with.calculator_sub_package.basics.utility_module.rst  package_name_to_import_with.calculator_sub_package.inverses_module.rst  package_name_to_import_with.calculator_sub_package.operations_module.rst  package_name_to_import_with.calculator_sub_package.rst  package_name_to_import_with.calculator_sub_package.tests.conftest.rst  package_name_to_import_with.calculator_sub_package.tests.rst  package_name_to_import_with.calculator_sub_package.tests.test_inverses.rst  package_name_to_import_with.calculator_sub_package.tests.test_operations.rst  package_name_to_import_with.calculator_sub_package.tests.test_wrappers.rst  package_name_to_import_with.calculator_sub_package.utility_module.rst  package_name_to_import_with.calculator_sub_package.wrapper_module.rst  package_name_to_import_with.data_using_module.rst  package_name_to_import_with.garbage_collection_module.rst  package_name_to_import_with.rst  package_name_to_import_with.simplify.rst  package_name_to_import_with.utils.rst  tests.rst  tests.test_version.rst
docs/source/guidelines/: CLI.md  GUI.md  INDEX.md  INSTALL.md
requirements/: requirements.dev.txt  requirements.doc.txt  requirements.format.txt  requirements.lint.txt  requirements.release.txt  requirements.test.txt  requirements.txt
src/: module_that_can_be_imported_directly.py  module_that_can_be_invoked_from_cli.py  module_that_can_invoke_gui_from_cli.py
src/package_name_to_import_with/: __init__.py  data_using_module.py  garbage_collection_module.py  metadata.json  simplify.py  utils.py
src/package_name_to_import_with/calculator_sub_package/: __init__.py  inverses_module.py  operations_module.py  utility_module.py  wrapper_module.py
src/package_name_to_import_with/calculator_sub_package/basics/: __init__.py  utility_module.py
src/package_name_to_import_with/calculator_sub_package/basics/assumptions/: __init__.py  inverses_module.py  operations_module.py
src/package_name_to_import_with/calculator_sub_package/basics/assumptions/tests/: conftest.py  test_inverses.py  test_operations.py
src/package_name_to_import_with/calculator_sub_package/basics/tests/: conftest.py  test_utilities.py
src/package_name_to_import_with/calculator_sub_package/tests/: conftest.py  test_hypotheses.py  test_inverses.py  test_operations.py  test_wrappers.py
src/package_name_to_import_with/tests/: __init__.py  test_hypotheses.py  test_simplify.py
src/tests/: test_cli.py  test_version.py
tests/: __init__.py  test_cli.py  test_version.py
tests/package_name_to_import_with/: test_hypotheses.py
tests/package_name_to_import_with/calculator_sub_package/: __init__.py  conftest.py  test_wrappers.py
tests/package_name_to_import_with/calculator_sub_package/basics/: __init__.py
tests/package_name_to_import_with/calculator_sub_package/basics/assumptions/: __init__.py  conftest.py  test_inverses.py
typing-stubs-for-package-name-to-install-with/: module_that_can_be_invoked_from_cli.pyi  module_that_can_invoke_gui_from_cli.pyi
typing-stubs-for-package-name-to-install-with/package_name_to_import_with/: __init__.pyi  data_using_module.pyi  garbage_collection_module.pyi  simplify.pyi  utils.pyi
typing-stubs-for-package-name-to-install-with/package_name_to_import_with/calculator_sub_package/: __init__.pyi  inverses_module.pyi  operations_module.pyi  utility_module.pyi  wrapper_module.pyi
typing-stubs-for-package-name-to-install-with/package_name_to_import_with/calculator_sub_package/basics/: __init__.pyi  utility_module.pyi
typing-stubs-for-package-name-to-install-with/package_name_to_import_with/calculator_sub_package/basics/assumptions/: __init__.pyi  inverses_module.pyi  operations_module.pyi
