[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=65.5.1",
]

[project]
name = "package-name-to-install-with"
version = "0.0.5"
description = "A small example package"
keywords = [
  "development",
  "packaging",
  "sample",
  "setuptools",
]
license = { text = "mit" } # license = { file = "LICENSE.txt" }
maintainers = [
  { name = "Anirban Ray" },
  { email = "39331844+yarnabrina@users.noreply.github.com" },
  { name = "First Maintainer", email = "first.maintainer@example.com" },
  { name = "Second Maintainer", email = "second.maintainer@example.com" },
]
authors = [
  { name = "Anirban Ray" },
  { email = "39331844+yarnabrina@users.noreply.github.com" },
  { name = "First Author", email = "first.author@example.com" },
  { name = "Second Author", email = "second.author@example.com" },
]
requires-python = "<3.13,>=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Flake8",
  "Framework :: Pydantic",
  "Framework :: Pydantic :: 2",
  "Framework :: Pytest",
  "Framework :: Sphinx",
  "Intended Audience :: Developers",
  "License :: OSI Approved",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dynamic = [
  "readme",
]
dependencies = [
  "pydantic<3,>=2.4.2",
  "PySimpleGUI<4.61,>=4.60.4",
]
[project.optional-dependencies]
all = [
  "autodoc_pydantic",
  "autoflake",
  "bandit",
  "black",
  "blacken-docs",
  "build",
  "codespell[toml]",
  "coverage[toml]",
  "docformatter[tomli]",
  "flake8",
  "furo",
  "hypothesis[pytest]",
  "interrogate",
  "isort",
  "mypy",
  "myst-parser[linkify]",
  "nox",
  "numpydoc",
  "pre-commit",
  "pylint",
  "pyproject-fmt",
  "pyright",
  "pytest",
  "pyupgrade",
  "ruff",
  "Sphinx",
  "sphinx-copybutton",
  "twine",
  "validate-pyproject",
  "vulture",
]
dev = [
  "codespell[toml]",
  "nox",
  "numpydoc",
  "pre-commit",
  "ruff",
  "typos",
]
doc = [
  "autodoc_pydantic",
  "furo",
  "myst-parser[linkify]",
  "Sphinx",
  "sphinx-copybutton",
]
format = [
  "autoflake",
  "black",
  "blacken-docs",
  "docformatter[tomli]",
  "isort",
  "pyproject-fmt",
  "pyupgrade",
]
lint = [
  "bandit",
  "flake8",
  "interrogate",
  "mypy",
  "pylint",
  "pyright",
  "validate-pyproject",
  "vulture",
]
release = [
  "build",
  "twine",
]
test = [
  "coverage[toml]",
  "hypothesis[pytest]",
  "pytest",
]
[project.urls]
"Bug Tracker" = "https://github.com/yarnabrina/learn-python-packaging/issues"
"Documentation" = "https://learn-python-packaging.readthedocs.io"
"Source Code" = "https://github.com/yarnabrina/learn-python-packaging"
[project.scripts]
console-calculator = "module_that_can_be_invoked_from_cli:console_calculator"
[project.gui-scripts]
gui-calculator = "module_that_can_invoke_gui_from_cli:gui_calculator"

[tool.setuptools]
py-modules = [
  "module_that_can_be_imported_directly",
  "module_that_can_be_invoked_from_cli",
  "module_that_can_invoke_gui_from_cli",
]

[tool.setuptools.dynamic]
readme = { file = "README.md", content-type = "text/markdown" }

[tool.setuptools.packages.find]
where = [
  "src",
]
include = [
  "package_name_to_import_with*",
]
exclude = [
  "*tests*",
]
namespaces = false

[tool.setuptools.package-data]
"package_name_to_import_with" = [
  "metadata.json",
  "py.typed",
]

[tool.setuptools.exclude-package-data]
"*" = [
  ".gitattributes",
  ".gitignore",
]

[tool.black]
line-length = 99
target-version = [
  "py310",
]

[tool.ruff]
fix = true
indent-width = 4
line-length = 99
output-format = "grouped"
preview = false
respect-gitignore = true
src = [
  "docs",
  "src",
  "tests",
]
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
preview = false
quote-style = "double"

[tool.ruff.lint]
fixable = [
  "ALL",
]
ignore = [
  "COM",  # flake8-commas
  "CPY",  # flake8-copyright
  "D213",  # Multi-line docstring summary should start at the second line
  "DTZ",  # flake8-datetimez
  "EM",  # flake8-errmsg
  "FBT",  # flake8-boolean-trap
  "FIX",  # flake8-fixme
  "G",  # flake8-logging-format
  "ICN",  # flake8-import-conventions
  "PD",  # pandas-vet
  "RET501",  # Do not explicitly return None in function if it is the only possible return value
  "RET502",  # Do not implicitly return None in function able to return non-None value
  "RET503",  # Missing explicit return at the end of function able to return non-None value
  "RET504",  # Unnecessary assignment to {name} before return statement
  "TID252",  # Prefer absolute imports over relative imports from parent modules
  "TRY003",  # Avoid specifying long messages outside the exception class
]
ignore-init-module-imports = true
preview = false
select = [
  "ALL",
]
task-tags = [
  "TODO",
  "FIXME",
]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Query",
  "pydantic.Field",
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.flake8-type-checking]
exempt-modules = [
  "typing",
  "typing_extensions",
]
quote-annotations = true
runtime-evaluated-base-classes = [
  "pydantic.BaseModel",
]
runtime-evaluated-decorators = [
  "pydantic.validate_call",
]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
  "pydantic.field_validator",
]

[tool.ruff.lint.per-file-ignores]
"src/**/__init__.py" = [
  "F401",  # {name} imported but unused; consider using importlib.util.find_spec to test for availability
]
"docs/**/conf.py" = [
  "INP001",  # File {filename} is part of an implicit namespace package. Add an __init__.py.
]
"tests/**/conftest.py" = [
  "INP001",  # File {filename} is part of an implicit namespace package. Add an __init__.py.
  "PLR0913",  # Too many arguments in function definition ({c_args} > {max_args})
]
"tests/**/test_*.py" = [
  "INP001",  # File {filename} is part of an implicit namespace package. Add an __init__.py.
  "PLR0913",  # Too many arguments in function definition ({c_args} > {max_args})
  "S101",  # Use of assert detected
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 99
max-line-length = 99

[tool.ruff.lint.pydocstyle]
convention = "numpy"
ignore-decorators = [
  "typing.overload",
]
property-decorators = [
  "pydantic.computed_field",
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.isort]
overwrite_in_place = true
profile = "black"
atomic = true
line_length = 99
remove_redundant_aliases = true
src_paths = [
  "src",
]
py_version = 310

[tool.pylint.main]
extension-pkg-allow-list = [
  "pydantic",
]
fail-under = 8.5
jobs = 0
recursive = true

[tool.pylint.basic]
include-naming-hint = true

[tool.pylint.format]
max-line-length = 99

[tool.pylint.logging]
logging-format-style = "new"

[tool.pylint."messages control"]
enable = [
  "all",
]
disable = [
  "import-outside-toplevel",  # Used when an import statement is used anywhere other than the module toplevel. Move this import to the top of the file.
  "logging-fstring-interpolation",  # Used when a logging statement has a call form of "logging.<logging method>(f"...")".Use another type of string formatting instead. You can use % formatting but leave interpolation to the logging function by passing the parameters as arguments. If logging-format-interpolation is disabled then you can use str.format. If logging-not-lazy is disabled then you can use % formatting as normal.
]

[tool.pylint.reports]
output-format = "colorized"

[tool.docformatter]
in-place = true
recursive = true
wrap-summaries = 99
wrap-descriptions = 99

[tool.pytest.ini_options]
addopts = "--junit-xml=pytest_junit_report.xml --doctest-modules --doctest-ignore-import-errors --doctest-continue-on-failure"
console_output_style = "count"

[tool.coverage.run]
branch = true
command_line = "--module pytest"
data_file = "coverage_data"
include = [
  "src/**/*.py",
]
omit = [
  "tests/**/conftest.py",
  "tests/**/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "if typing.TYPE_CHECKING:",
]
fail_under = 85
include = [
  "src/**/*.py",
]
include_namespace_packages = true
omit = [
  "tests/**/conftest.py",
  "tests/**/test_*.py",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "coverage_html_report"

[tool.coverage.xml]
output = "coverage_xml_report.xml"

[tool.mypy]
files = [
  "src",
]
exclude = [
  "conftest",
  "test_",
]
strict = true

[[tool.mypy.overrides]]
module = "PySimpleGUI"
ignore_missing_imports = true

[tool.pyright]
include = [
  "src",
]
exclude = [
  "tests/**/conftest.py",
  "tests/**/test_*.py",
]
pythonVersion = "3.10"
reportMissingImports = false

[tool.autoflake]
in-place = true
remove-all-unused-imports = true
recursive = true
expand-star-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.interrogate]
fail-under = 85
ignore-init-method = true

[tool.vulture]
min_confidence = 100
paths = [
  "src",
]

[tool.numpydoc_validation]
checks = [  # Report findings on all checks except the ones listed below "all"
  "all",
  "GL01",  # Docstring text (summary) should start in the line immediately after the opening quotes (not in the same line, or leaving a blank line in between)
  "ES01",  # No extended summary found
  "PR08",  # Parameter "{param_name}" description should start with a capital letter
  "PR09",  # Parameter "{param_name}" description should finish with "."
  "RT04",  # Return value description should start with a capital letter
  "RT05",  # Return value description should finish with "."
  "SA01",  # See Also section not found
  "EX01",  # No examples section found
]
exclude = [  # Don't report issues on objects matching any of the regular regular expressions
  "\\.__init__$",
]
